syntax = "proto3";

package rpc_coupon;

option go_package = "github.com/loveo2d/CouponIssuanceSystem/internal/api/proto/coupon";

import "google/protobuf/timestamp.proto";

message IssueCouponRequest {
    int32 campaign_id = 1;
}

message IssueCouponResponse {
    int64 coupon_id = 1;
    int32 campaign_id = 2;
    string coupon_code = 3;
    google.protobuf.Timestamp issued_at = 4;
}

service IssueCouponService {
    rpc IssueCoupon(IssueCouponRequest) returns (IssueCouponResponse) {}
}
